// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly workspace is opened 1`] = `
<div>
  <div
    class="flex flex-col h-full B-search-notes_search-notes"
    style="overflow-y: auto;"
  >
    <div
      class="px-2 mt-2 "
    >
      <div
        class="B-ui-components_input-container"
      >
        <input
          aria-label="Search"
          autocapitalize="off"
          autocorrect="off"
          class="outline-offset-1 text-field-neutral border-1 border-colorNeutralTextFieldBorder rounded px-2 py-1 w-full  B-ui-components_misc-input-ring "
          placeholder="Search"
          type="text"
          value=""
        />
        <div
          style="position: relative; display: flex;"
        />
      </div>
    </div>
    <div
      class="flex flex-row justify-between px-2 my-1 text-xs "
    />
    <div
      class="flex-grow"
      style="overflow-y: auto;"
    />
  </div>
</div>
`;

exports[`show search results 1`] = `
<div>
  <div
    class="flex flex-col h-full B-search-notes_search-notes"
    style="overflow-y: auto;"
  >
    <div
      class="px-2 mt-2 "
    >
      <div
        class="B-ui-components_input-container"
      >
        <input
          aria-label="Search"
          autocapitalize="off"
          autocorrect="off"
          class="outline-offset-1 text-field-neutral border-1 border-colorNeutralTextFieldBorder rounded px-2 py-1 w-full  B-ui-components_misc-input-ring "
          placeholder="Search"
          type="text"
          value=""
        />
        <div
          style="position: relative; display: flex;"
        />
      </div>
    </div>
    <div
      class="flex flex-row justify-between px-2 my-1 text-xs "
    >
      <span
        class=""
      >
        Found 1 notes
      </span>
      <button
        class="focus:outline-none "
        data-bangle-editor-break="true"
        data-bangle-editor-pos="bottom"
        type="button"
      >
        Collapse all
      </button>
    </div>
    <div
      class="flex-grow"
      style="overflow-y: auto;"
    >
      <div
        class="B-ui-components_sidebar-row2 BU_hover B-search-notes_search-result-note-match pl-1 pr-3  select-none BU_active  "
        data-id="search-notes-result-0"
        role="button"
        style="cursor: pointer; display: flex; justify-content: space-between; user-select: none;"
      >
        <div
          class="flex flex-row"
        >
          <div
            class="B-ui-components_left-node"
          >
            <button
              class="focus:outline-none "
              data-bangle-editor-break="true"
              data-bangle-editor-pos="bottom"
              type="button"
            >
              <svg
                class=" "
                fill="currentColor"
                style="height: 16px; width: 16px;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.343 7.757L4.93 9.172 12 16.242l7.071-7.07-1.414-1.415L12 13.414 6.343 7.757z"
                />
              </svg>
            </button>
          </div>
          <span
            class="flex flex-col "
          >
            <span
              class="text-sm font-bold"
            >
              one
            </span>
            
          </span>
        </div>
        <div
          class="flex flex-row"
        >
          <span
            class="B-ui-components_right-node"
          >
            <button
              class="focus:outline-none text-xs font-semibold "
              data-bangle-editor-break="true"
              data-bangle-editor-pos="bottom"
              type="button"
            >
              1
            </button>
          </span>
          <span
            class="B-ui-components_right-hover-node"
          >
            <button
              class="focus:outline-none text-xs font-semibold "
              data-bangle-editor-break="true"
              data-bangle-editor-pos="bottom"
              type="button"
            >
              1
            </button>
          </span>
        </div>
      </div>
      <a
        class="rounded-sm block B-search-notes_search-result-text-match  mt-3 pb-4 border-b-1 border-colorNeutralBorder "
      >
        <div
          class="B-ui-components_sidebar-row2 BU_hover pl-3 "
          data-id="search-result-text-match-0"
          role="button"
          style="cursor: pointer; display: flex; justify-content: space-between; user-select: none;"
        >
          <div
            class="flex flex-row"
          >
            <div
              class="B-ui-components_left-node"
            />
            <span
              class=""
            >
              <span
                class="text-sm "
              >
                <div
                  class="B-search-notes_highlight-text-container"
                >
                  <span
                    class="B-search-notes_highlight-text text-sm"
                  >
                    hello
                  </span>
                  <span
                    class="B-search-notes_highlight-text text-sm"
                  >
                     world
                  </span>
                </div>
              </span>
            </span>
          </div>
          <div
            class="flex flex-row"
          >
            <span
              class="B-ui-components_right-node"
            />
            <span
              class="B-ui-components_right-hover-node"
            />
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
